--- a/package.json
+++ b/package.json
@@ -13,7 +13,10 @@
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.17.2",
+    "chai": "^4.1.1",
+    "chai-http": "^3.0.0",
     "express": "^4.15.4",
+    "factory-girl": "^4.3.0",
     "moment": "^2.18.1",
     "mongoose": "^4.11.7",
     "morgan": "^1.8.2"
@@ -21,8 +24,11 @@
   "devDependencies": {
     "babel": "^6.23.0",
     "babel-cli": "^6.26.0",
+    "babel-core": "^6.26.0",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-stage-0": "^6.24.1",
+    "faker": "^4.1.0",
+    "mocha": "^3.5.0",
     "nodemon": "^1.11.0"
   }
 }
